Update query params timespan
